--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <section class="first-section">
         <div class="container">
-            <div class="row justify-content-between align-items-baseline">
+            <div class="row justify-content-between align-items-flexstart">
                 <div class="col-lg-7">
                     <h3 class="first-main-title">Lorem Ipsum dummy</h3>
                     <p class="first-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
